force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field stores the candidate&apos;s current city or location. It is used to determine location-based fit for roles, assess relocation requirements, and support regional filtering and reporting.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>