force-app/main/default/objects/Contact/fields/Adhaar_Card__c.field-meta.xml
<CustomField>
    <fullName>Adhaar_Card__c</fullName>
    <label>Adhaar Card</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>