force-app/main/default/objects/Contact/fields/Alternate_number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_number__c</fullName>
    <description>Optional backup contact number for the recruiter, such as a personal or secondary work phone.</description>
    <label>Alternate number</label>
    <type>Phone</type>
</CustomField>