force-app/main/default/objects/Contact/fields/alternate_phone__c.field-meta.xml
<CustomField>
    <fullName>alternate_phone__c</fullName>
    <label>Alternate phone</label>
    <type>Phone</type>
</CustomField>