force-app/main/default/objects/Contact/fields/Availability_Data__c.field-meta.xml
<CustomField>
    <fullName>Availability_Data__c</fullName>
    <label>Availability Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>