force-app/main/default/objects/Contact/fields/Availability_Link_Used__c.field-meta.xml
<CustomField>
    <fullName>Availability_Link_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability Link Used</label>
    <type>Checkbox</type>
</CustomField>