force-app/main/default/objects/Contact/fields/Availability_Token__c.field-meta.xml
<CustomField>
    <fullName>Availability_Token__c</fullName>
    <label>Availability Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>