force-app/main/default/objects/Contact/fields/Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address__c</fullName>
    <description>Physical address of the branch where the recruiter is located or assigned.</description>
    <label>Branch Address</label>
    <type>Address</type>
</CustomField>