force-app/main/default/objects/Contact/fields/Calendar_Model__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Model</label>
    <referenceTo>CalendarModel</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>