force-app/main/default/objects/Contact/fields/Can_join_in__c.field-meta.xml
<CustomField>
    <fullName>Can_join_in__c</fullName>
    <description>This field captures the number of days from today in which the candidate can join the company if offered a role. It helps recruiters assess availability and align hiring timelines. Common values range from 0 (immediate) to 90+ days.</description>
    <label>Can join in?(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>