force-app/main/default/objects/Contact/fields/Current_CTC__c.field-meta.xml
<CustomField>
    <fullName>Current_CTC__c</fullName>
    <description>This field captures the candidate’s current annual total compensation (Cost to Company), including base salary, bonuses, and benefits.</description>
    <label>Current CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>