force-app/main/default/objects/Contact/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <description>This field store&apos;s current location of the candidate.</description>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>