force-app/main/default/objects/Contact/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Captures the current or most recent job title held by the candidate (e.g., Salesforce Developer, QA Engineer, Marketing Manager)</description>
    <inlineHelpText>Captures the current or most recent job title held by the candidate (e.g., Salesforce Developer, QA Engineer, Marketing Manager)</inlineHelpText>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>