force-app/main/default/objects/Contact/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t wish to answer</fullName>
            </value>
            <value>
                <fullName>No, I don&apos;t have a disability or a history / record of having a disability</fullName>
            </value>
            <value>
                <fullName>Yes, I have a disability or have a history / record of having a disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>