force-app/main/default/objects/Contact/fields/Expected_CTC__c.field-meta.xml
<CustomField>
    <fullName>Expected_CTC__c</fullName>
    <description>This field captures the candidate’s expected total annual compensation (Cost to Company) for their next role. It helps recruiters assess alignment between candidate expectations and the job&apos;s compensation range.</description>
    <label>Expected CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>