force-app/main/default/objects/Contact/fields/Experience_Month__c.field-meta.xml
<CustomField>
    <fullName>Experience_Month__c</fullName>
    <inlineHelpText>Please enter if there are any months of more experience after putting in the Experience Year</inlineHelpText>
    <label>Experience Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>