force-app/main/default/objects/Contact/fields/GPA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GPA_Percentage__c</fullName>
    <label>GPA / Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>