force-app/main/default/objects/Contact/fields/Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification__c</fullName>
    <inlineHelpText>Give comma separated values eg: B.Tech, M.Sc, M.Com, M.A, MBA</inlineHelpText>
    <label>Highest Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>