force-app/main/default/objects/Contact/fields/Industrial_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Knowledge__c</fullName>
    <inlineHelpText>Enter comma-separated Industry names relevant to your experience. For example: Manufacturing, Information Technology, Healthcare, Banking, Automotive, etc.</inlineHelpText>
    <label>Industrial Knowledge</label>
    <length>250</length>
    <type>Text</type>
</CustomField>