force-app/main/default/objects/Contact/fields/IsBillable__c.field-meta.xml
<CustomField>
    <fullName>IsBillable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shows whether the candidate is billable(on project) or not.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>