force-app/main/default/objects/Contact/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <description>This field captures the confirmed or expected date the candidate is scheduled to join the organization. It is used for onboarding planning, offer tracking, and internal reporting. The date should reflect the candidate&apos;s official start date after offer acceptance.</description>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>