force-app/main/default/objects/Contact/fields/Language_Known__c.field-meta.xml
<CustomField>
    <fullName>Language_Known__c</fullName>
    <description>Indicates the candidate’s ability to speak, read, and/or write in specific languages. This helps assess suitability for roles requiring multilingual skills.</description>
    <inlineHelpText>Enter comma-separated languages. For example: English, Hindi, French, Spanish, etc.</inlineHelpText>
    <label>Language Known</label>
    <length>255</length>
    <type>Text</type>
</CustomField>