force-app/main/default/objects/Contact/fields/No_of_projects__c.field-meta.xml
<CustomField>
    <fullName>No_of_projects__c</fullName>
    <description>This field captures the total number of professional projects the candidate is working on.</description>
    <inlineHelpText>Number of projects the candidate is currently working on</inlineHelpText>
    <label>No. of projects</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>