force-app/main/default/objects/Contact/fields/Panelist__c.field-meta.xml
<CustomField>
    <fullName>Panelist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panelist</label>
    <type>Checkbox</type>
</CustomField>