force-app/main/default/objects/Contact/fields/Preferred_Shift__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Shift__c</fullName>
    <label>Preferred Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>