force-app/main/default/objects/Contact/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <defaultValue>&apos;Not Rated&apos;</defaultValue>
    <description>This field stores rating of the candidate.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
                <default>true</default>
                <label>Not Rated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>