force-app/main/default/objects/Contact/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <description>Home or permanent address of the recruiter.</description>
    <label>Residential Address</label>
    <type>Address</type>
</CustomField>