force-app/main/default/objects/Contact/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <description>Auto populates through candidate document upload LWC component when resume is uploaded.</description>
    <label>Resume Link</label>
    <type>TextArea</type>
</CustomField>