force-app/main/default/objects/Contact/fields/Share_Token__c.field-meta.xml
<CustomField>
    <fullName>Share_Token__c</fullName>
    <label>Share Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>