force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>This field captures the source from which the candidate was acquired.</description>
    <inlineHelpText>Select the origin from which the candidate was referred or discovered.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Job Portal (e.g., Naukri, Monster)</fullName>
            </value>
            <value>
                <fullName>Recruitment Agency</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Campus Hiring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>