force-app/main/default/objects/Contact/fields/Token_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Generated_Date__c</fullName>
    <label>Token Generated Date</label>
    <type>DateTime</type>
</CustomField>