force-app/main/default/objects/Contact/fields/Total_Offers_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Offers_Made__c</fullName>
    <description>The total number of offers extended by the recruiter to candidates.</description>
    <label>Total Offers Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>