force-app/main/default/objects/Contact/fields/Total_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Generated__c</fullName>
    <description>Total revenue attributed to the recruiter&apos;s placements or activities.</description>
    <label>Total Revenue Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>