force-app/main/default/objects/Contact/fields/Work_Authorisation_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorisation_Expiry_Date__c</fullName>
    <label>Work Authorisation Expiry Date</label>
    <type>Date</type>
</CustomField>