force-app/main/default/objects/Contact/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <label>Work Authorization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>Can work for any employer</fullName>
            </value>
            <value>
                <fullName>Canada Authorized</fullName>
            </value>
            <value>
                <fullName>Canadian Citizen</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Current Employer Only</fullName>
            </value>
            <value>
                <fullName>Employment Auth. Document</fullName>
            </value>
            <value>
                <fullName>Employment Authorization Document</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>GC-EAD</fullName>
            </value>
            <value>
                <fullName>Green Card Holder</fullName>
            </value>
            <value>
                <fullName>H1-B</fullName>
            </value>
            <value>
                <fullName>Have H1 Visa</fullName>
            </value>
            <value>
                <fullName>L1-A</fullName>
            </value>
            <value>
                <fullName>L1-B</fullName>
            </value>
            <value>
                <fullName>L2-EAD</fullName>
            </value>
            <value>
                <fullName>HAFAD.</fullName>
            </value>
            <value>
                <fullName>H4-EAD</fullName>
            </value>
            <value>
                <fullName>Need H1 Visa</fullName>
            </value>
            <value>
                <fullName>Need H1 Visa Sponsor</fullName>
            </value>
            <value>
                <fullName>OPT EAD</fullName>
            </value>
            <value>
                <fullName>Sponsorship Required</fullName>
            </value>
            <value>
                <fullName>TN Permit Holder</fullName>
            </value>
            <value>
                <fullName>TN Visa</fullName>
            </value>
            <value>
                <fullName>United Kingdom Authorized</fullName>
            </value>
            <value>
                <fullName>US Authorized</fullName>
            </value>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>US Citizenship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>