force-app/main/default/objects/Contact/recordTypes/Candidate.recordType-meta.xml
<RecordType>
    <fullName>Candidate</fullName>
    <active>true</active>
    <description>Record type for Candidate</description>
    <label>Candidate</label>
</RecordType>