force-app/main/default/objects/Contact/recordTypes/Recruiter.recordType-meta.xml
<RecordType>
    <fullName>Recruiter</fullName>
    <active>true</active>
    <description>Record Type for Recruiter</description>
    <label>Recruiter</label>
</RecordType>